--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
 Flask==0.10.1
+Flask-Migrate==1.8.0
+Flask-SQLAlchemy==2.1
+Flask-Script==2.0.5
 Jinja2==2.8
+Mako==1.0.4
 MarkupSafe==0.23
+SQLAlchemy==1.0.12
 Werkzeug==0.11.8
+alembic==0.8.6
+beautifulsoup4==4.4.1
 gunicorn==19.4.5
 itsdangerous==0.24
+python-editor==1.0
+requests==2.9.1
