--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,10 @@ SQLAlchemy==1.0.12
 Werkzeug==0.11.8
 alembic==0.8.6
 beautifulsoup4==4.4.1
+click==6.6
 gunicorn==19.4.5
 itsdangerous==0.24
 python-editor==1.0
+redis==2.10.5
 requests==2.9.1
+rq==0.5.6
