Refactor to allow inclusion in enduser's project

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 source env/bin/activate
-export APP_SETTINGS='pyscraper_framework.config.DevelopmentConfig'
+export APP_SETTINGS='DevelopmentConfig'
+export APP_BASEDIR=$(pwd)/pyscraper_framework
